# conditioner

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: deploy.yml
data/: conditions.yaml  spaces.yaml  starting_points.yaml
docs/: costs.md
docs/design/: mechanisms.md
docs/design/backend/: condition-generation.md
docs/design/frontend/: condition-webpage.md  entrypoint.md  general.md  legal.md  probability.md  search.md  spaces.md  starting-points.md
prompts/: condition.yaml  signals.yaml
src/condition_navigator/: cli.py  graph.py  models.py  starting_points.py  storage.py
src/condition_navigator/generator/: claude.py  prompts.py  signals.py
tests/: test_graph.py  test_models.py
tests/generator/: test_claude.py  test_prompts.py
web/: .firebaserc  firebase.json  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  spaces.ts  theme.ts  types.ts
web/src/components/: AccordionSection.tsx  Feedback.tsx  Layout.tsx  SearchBox.tsx  SettingsMenu.tsx  SpaceSwitcher.tsx  SubConditionTable.tsx
web/src/pages/: ConditionList.tsx  ConditionPage.tsx  HomePage.tsx  SearchPage.tsx  StartingPointPage.tsx
